Label refactor part1 抽取Types。共享new Type 纠错码加入Cipher API